[gd_scene load_steps=5 format=2]

[ext_resource path="res://title_bar.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://new_button.png" type="Texture" id=3]
[ext_resource path="res://continue_button.png" type="Texture" id=4]

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="title" type="Sprite" parent="."]
position = Vector2( 498.327, 130.31 )
texture = ExtResource( 1 )

[node name="new_game" type="Button" parent="."]
margin_left = 317.378
margin_top = 439.19
margin_right = 664.378
margin_bottom = 586.19
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cont" type="Button" parent="."]
visible = false
margin_left = 306.85
margin_top = 249.35
margin_right = 678.85
margin_bottom = 419.35
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="cont" to="." method="_on_cont_pressed"]
